fix reviews layout issues in product page

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 	line-height: 25px;
 	font-size: 20px;
 }
+.woocommerce ol.commentlist,
 .msbr-show-review-modal ol.commentlist {
 	list-style: none;
 	padding-left: 0;
@@ -21,6 +22,7 @@
 .msbr-show-review-modal ol.commentlist p {
 	margin-bottom: 0;
 }
+.woocommerce ol.commentlist li .comment_container,
 .msbr-show-review-modal ol.commentlist li .comment_container {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -34,6 +36,7 @@
 	-ms-flex-pack: justify;
 	justify-content: space-between;
 }
+.woocommerce .woocommerce-Tabs-panel--msbr_reviews #reviews #comments ol.commentlist li img.avatar,
 .msbr-show-review-modal ol.commentlist li .comment_container > img {
 	display: inline-block;
 	width: 60px;
@@ -41,11 +44,20 @@
 	background: #ebe9eb;
 	border: 1px solid #e4e1e3;
 }
+.woocommerce .woocommerce-Tabs-panel--msbr_reviews #reviews #comments ol.commentlist li img.avatar {
+	width: 60px;
+	float: none;
+	position: relative;
+}
+.woocommerce ol.commentlist li .comment_container .comment-text,
 .msbr-show-review-modal ol.commentlist li .comment_container .comment-text {
 	width: calc(100% - 60px - 10px);
 	padding: 10px;
 	border: 1px solid #e4e1e3;
 	border-radius: 5px;
+}
+.woocommerce .woocommerce-Tabs-panel--msbr_reviews #reviews #comments ol.commentlist li .comment-text {
+	margin-left: 0;
 }
 
 /* Show Review Star Rating */
